--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=31197012
-keyPassword=31197012
+storePassword=*******
+keyPassword=*******
 keyAlias=yanwit
 storeFile=D:/desktop/rio7phonebook/key_phonebook.jks
